AX: Fix accessibility/aria-current-state-changed-notification.html in isolated tree mode https://bugs.webkit.org/show_bug.cgi?id=237014

Reviewed by Chris Fleizach.

We need to update AXPropertyName::CurrentValue when we get a AXCurrentStateChanged notification.

Fixes accessibility/aria-current-state-changed-notification.html in isolated tree mode.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* accessibility/isolatedtree/AXIsolatedTree.cpp:



Canonical link: https://commits.webkit.org/247632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290309 268f45cc-cd09-0410-ab3c-d52691b4dbfc